fix #44385: The related characters cannot be seen easily when the categary background color is dark on mobile

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/MobileDayView.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/MobileDayView.css
@@ -68,7 +68,12 @@
 	padding: 5px 0;
 	margin: 10px 0;
 	width: 100%;
+	display: inline-block;
 	text-align: center;
+}
+.mobile-start-day .mobile-summary-content-text {
+	letter-spacing: -1px;
+	display: inline-block;
 }
 .mobile-start-day .probability-toggle-container{
 	margin-right: 4px;
